# fastapi-serverless

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
app/: main.py
app/core/: config.py
app/schemas/: general.py
