[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["jonra1993 <jon_ra@hotmail.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.104.1"}
mangum = "^0.17.0"
transcrypt = "^3.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
